# plana-api

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: publish.yml
docs/: api_doc.md
plana/api/: main.py
plana/api/auth/: oauth.py
plana/api/middleware/: auth.py  types.py  utils.py
plana/api/routes/: __init__.py  auth.py  messages.py  users.py
plana/api/routes/guilds/: __init__.py  ai.py  core.py  images.py  levels.py  messages.py  preferences.py  react_roles.py  rss.py  users.py  welcome.py
plana/api/utils/: handler.py  helper.py  s3.py
plana/database/: __init__.py
plana/database/models/: ai.py  base.py  core.py  guild.py  levels.py  message.py  react_role.py  rss.py  user.py  welcome.py
plana/database/utils/: db.py  helper.py  pub.py
tests/: db_setup.py  t.py  test_base_operations.py
